--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of October 8, 2020"
+date: "Data as of October 12, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -46,15 +46,8 @@ input_path <- c("C:/R/covid19/")
 file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 
-covid_data <- read_rds(paste0(input_path, "covid_data_clean.rds")) 
-
-summary_data <- covid_data %>% 
-   mutate(month_of_year = month(symptom_onset_date_new, label = TRUE)) %>% 
-   filter(month_of_year == "Sep") %>% 
-   #group_by(age_group3) %>% 
-   count()
-#summary_data
-
+covid_data <- read_rds(paste0(input_path, "covid_data_clean.rds")) %>% 
+   filter(gender != "nb")
 ```
 
 
@@ -229,7 +222,7 @@ age_count_plot <- covid_data %>%
      labs(title = "COVID-19 Cases by age group",
           subtitle = paste0("Missoula County, since March 2020. Data incomplete for ", age_na, " cases."), 
           y = "Number of cases", x = "Age Group (years)") +
-     scale_y_continuous(breaks = c(seq(0, 500, 25)), labels = c(seq(0, 500, 25))) +
+     scale_y_continuous(breaks = c(seq(0, 1000, 25)), labels = c(seq(0, 1000, 25))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -394,7 +387,7 @@ age_incidence_plot_bar <- age_incidence %>%
      labs(title = "COVID-19 incidence by age group",
           subtitle = paste0("Missoula County, since March 2020. Data incomplete for ", age_na, " cases."),
           y = "Incidence per 100,000 Population", x = "Age Group (years)") +
-     scale_y_continuous(breaks = c(seq(0, 2000, 100)), labels = c(seq(0, 2000, 100))) +
+     scale_y_continuous(breaks = c(seq(0, 3000, 100)), labels = c(seq(0, 3000, 100))) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 18, colour = "black"),
@@ -503,7 +496,7 @@ race_plot_count <- covid_data %>%
      labs(title = "COVID-19 cases by self-reported race",
           subtitle = paste0("Missoula County. Data incomplete for ", race_na, " cases."),
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
+     scale_y_continuous(breaks = c(seq(0, 2000, 100)), labels = c(seq(0, 2000, 100))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -537,7 +530,7 @@ race_incidence_plot <- race_incidence %>%
      labs(title = "COVID-19 incidence by self-reported race",
           subtitle = paste0("Missoula County. Data incomplete for ", race_na, " cases."),
           y = "Incidence per 100,000 Population", x = "") +
-     scale_y_continuous(breaks = c(seq(0, 10000, 500)), labels = c(seq(0, 10000, 500))) +
+     scale_y_continuous(breaks = c(seq(0, 15000, 500)), labels = c(seq(0, 15000, 500))) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 18, colour = "black"),
@@ -574,7 +567,7 @@ ethnicity_plot <- covid_data %>%
      labs(title = "COVID-19 cases by self-reported ethnicity",
           subtitle = paste0("Missoula County. Data incomplete for ", ethnicity_na, " cases."),
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
+     scale_y_continuous(breaks = c(seq(0, 2000, 100)), labels = c(seq(0, 2000, 100))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -608,7 +601,7 @@ ethnicity_incidence_plot <- ethnicity_incidence %>%
      labs(title = "COVID-19 incidence by self-reported ethnicity",
           subtitle = paste0("Missoula County. Data incomplete for ", ethnicity_na, " cases."),
           y = "Incidence per 100,000 Population", x = "") +
-     scale_y_continuous(breaks = c(seq(0, 1200, 50)), labels = c(seq(0, 1200, 50))) +
+     scale_y_continuous(breaks = c(seq(0, 2000, 100)), labels = c(seq(0, 2000, 100))) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 18, colour = "black"),
@@ -662,7 +655,7 @@ symptoms_gender_plot <- covid_data %>%
      labs(title = "Symptoms reported at time of testing", 
           subtitle = "By gender, Missoula County, 2020",
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 600, 25)), labels = c(seq(0, 600, 25))) +
+     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -716,7 +709,7 @@ symptoms_age_plot <- covid_data %>%
      labs(title = "Symptoms reported at time of testing", 
           subtitle = "By age group, Missoula County, 2020",
           y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 600, 25)), labels = c(seq(0, 600, 25))) +
+     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
      coord_flip() +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -925,7 +918,7 @@ epi_curve_onset_recent <- plot_data %>%
      scale_fill_manual(values = cbPalette) 
 epi_curve_onset_recent 
 
-#ggsave("ep_curve_onset_recent.jpg", width = 10, height = 5)
+#ggsave("ep_curve_onset_recent.jpg", width = 11, height = 5)
 ```
 
 \pagebreak  
@@ -1105,7 +1098,7 @@ county_r_plot <- county_r %>%
    scale_color_manual(values = c("black")) 
 county_r_plot
 
-#ggsave("C:/R/covid19/missoula_r_plot.png", width = 10, height = 6)
+#ggsave("C:/R/covid19/missoula_r_plot.png", width = 11, height = 6)
 ```
 
 \pagebreak  
@@ -1179,7 +1172,7 @@ epi_curve_onset <- covid_data %>%
 
 epi_curve_onset
 
-#ggsave("epi_curve_onset.jpg", width = 10, height = 5)
+#ggsave("epi_curve_onset.jpg", width = 11, height = 5)
 ```
 
 
