--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -208,8 +208,8 @@ ethnicity_incidence <- covid_data %>%
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group))
-age_na <- sum(age_n$case)
+   filter(!is.na(age_group))
+age_cases <- sum(age_n$case)
 
 # Age group bar plot - counts
 age_count_plot <- covid_data %>% 
@@ -220,7 +220,7 @@ age_count_plot <- covid_data %>%
    ggplot() +   
      geom_bar(aes(fct_rev(age_group)), fill = "steelblue", width = .6) +   
      labs(title = "COVID-19 Cases by age group",
-          subtitle = paste0("Missoula County, since March 2020. Data incomplete for ", age_na, " cases."), 
+          subtitle = paste0("Missoula County, since March 2020. N = ", age_cases, " cases."), 
           y = "Number of cases", x = "Age Group (years)") +
      scale_y_continuous(breaks = c(seq(0, 1000, 25)), labels = c(seq(0, 1000, 25))) +
      coord_flip() +
@@ -249,8 +249,8 @@ age_count_plot
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group) | is.na(test_date_new))
-age_na <- sum(age_n$case)
+   filter(!is.na(age_group) & !is.na(test_date_new))
+age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot <- covid_data %>% 
@@ -273,7 +273,7 @@ age_count_month_plot <- covid_data %>%
                 fill = NA) +
       theme_minimal() +
       labs(title = "Weekly COVID-19 cases by age group",
-        subtitle = paste0("Missoula County, 2020. Data incomplete for ", age_na, " cases."),
+        subtitle = paste0("Missoula County, 2020. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Number of cases per week") +
       xlab("") +
@@ -311,8 +311,8 @@ age_count_month_plot
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group3) | is.na(test_date_new))
-age_na <- sum(age_n$case)
+   filter(!is.na(age_group3) & !is.na(test_date_new))
+age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot2 <- covid_data %>% 
@@ -335,7 +335,7 @@ age_count_month_plot2 <- covid_data %>%
                 fill = NA) +
       theme_minimal() +
       labs(title = "Weekly COVID-19 cases by age group",
-        subtitle = paste0("Missoula County, 2020. Data incomplete for ", age_na, " cases."),
+        subtitle = paste0("Missoula County, 2020. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Number of cases per week") +
       xlab("") +
@@ -375,8 +375,8 @@ age_count_month_plot2
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group))
-age_na <- sum(age_n$case)
+   filter(!is.na(age_group))
+age_cases <- sum(age_n$case)
 
 # Incidence bar plot by age
 age_incidence_plot_bar <- age_incidence %>% 
@@ -385,7 +385,7 @@ age_incidence_plot_bar <- age_incidence %>%
      geom_col(aes(fct_rev(age_group), group_inc), fill = "steelblue", width = .6) +
      coord_flip() +
      labs(title = "COVID-19 incidence by age group",
-          subtitle = paste0("Missoula County, since March 2020. Data incomplete for ", age_na, " cases."),
+          subtitle = paste0("Missoula County, since March 2020. N = ", age_cases, " cases."),
           y = "Incidence per 100,000 Population", x = "Age Group (years)") +
      scale_y_continuous(breaks = c(seq(0, 3000, 100)), labels = c(seq(0, 3000, 100))) +
      theme_minimal() +
@@ -413,8 +413,8 @@ age_incidence_plot_bar
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group) | is.na(test_date_new))
-age_na <- sum(age_n$case)
+   filter(!is.na(age_group) & !is.na(test_date_new))
+age_cases <- sum(age_n$case)
 
 # Incidence line plot by age and month
 age_incidence_plot_line <- covid_data %>% 
@@ -444,7 +444,7 @@ age_incidence_plot_line <- covid_data %>%
                     color = age_group), size = 1.5) +
       theme_minimal() +
       labs(title = "COVID-19 incidence per week by age group",
-        subtitle = paste0("Missoula County, 2020. Data incomplete for ", age_na, " cases."),
+        subtitle = paste0("Missoula County, 2020. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Incidence per 100,000") +
       xlab("") +
@@ -485,8 +485,8 @@ age_incidence_plot_line
 
 ```{r}
 race_n <- covid_data %>% 
-   filter(is.na(race))
-race_na <- sum(race_n$case)
+   filter(!is.na(race))
+race_cases <- sum(race_n$case)
 
 #Bar plot of race count data
 race_plot_count <- covid_data %>% 
@@ -494,7 +494,7 @@ race_plot_count <- covid_data %>%
    ggplot() +   
      geom_bar(aes(x = fct_rev(race)), fill = "steelblue", width = .6) +   
      labs(title = "COVID-19 cases by self-reported race",
-          subtitle = paste0("Missoula County. Data incomplete for ", race_na, " cases."),
+          subtitle = paste0("Missoula County. N = ", race_cases, " cases."),
           y = "Count", x = "", fill = "") +
      scale_y_continuous(breaks = c(seq(0, 2000, 100)), labels = c(seq(0, 2000, 100))) +
      coord_flip() +
@@ -528,7 +528,7 @@ race_incidence_plot <- race_incidence %>%
      geom_col(aes(fct_rev(race), group_inc), fill = "steelblue", width = .6) +
      coord_flip() +
      labs(title = "COVID-19 incidence by self-reported race",
-          subtitle = paste0("Missoula County. Data incomplete for ", race_na, " cases."),
+          subtitle = paste0("Missoula County. N = ", race_cases, " cases."),
           y = "Incidence per 100,000 Population", x = "") +
      scale_y_continuous(breaks = c(seq(0, 15000, 500)), labels = c(seq(0, 15000, 500))) +
      theme_minimal() +
@@ -556,8 +556,8 @@ race_incidence_plot
 
 ```{r}
 ethnicity_n <- covid_data %>% 
-   filter(is.na(ethnicity))
-ethnicity_na <- sum(ethnicity_n$case)
+   filter(!is.na(ethnicity))
+ethnicity_cases <- sum(ethnicity_n$case)
 
 #Bar plot of ethnicity count data
 ethnicity_plot <- covid_data %>% 
@@ -565,7 +565,7 @@ ethnicity_plot <- covid_data %>%
    ggplot() +   
      geom_bar(aes(x = fct_rev(ethnicity)), fill = "steelblue", width = .6) +   
      labs(title = "COVID-19 cases by self-reported ethnicity",
-          subtitle = paste0("Missoula County. Data incomplete for ", ethnicity_na, " cases."),
+          subtitle = paste0("Missoula County. N = ", ethnicity_cases, " cases."),
           y = "Count", x = "", fill = "") +
      scale_y_continuous(breaks = c(seq(0, 2000, 100)), labels = c(seq(0, 2000, 100))) +
      coord_flip() +
@@ -599,7 +599,7 @@ ethnicity_incidence_plot <- ethnicity_incidence %>%
      geom_col(aes(fct_rev(ethnicity), group_inc), fill = "steelblue", width = .6) +
      coord_flip() +
      labs(title = "COVID-19 incidence by self-reported ethnicity",
-          subtitle = paste0("Missoula County. Data incomplete for ", ethnicity_na, " cases."),
+          subtitle = paste0("Missoula County. N = ", ethnicity_cases, " cases."),
           y = "Incidence per 100,000 Population", x = "") +
      scale_y_continuous(breaks = c(seq(0, 2000, 100)), labels = c(seq(0, 2000, 100))) +
      theme_minimal() +
@@ -799,8 +799,8 @@ kable(sum_nums, caption = "Number of contacts by age group, Missoula County",
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group) | is.na(test_date_new))
-age_na <- sum(age_n$case)
+   filter(!is.na(age_group) & !is.na(test_date_new))
+age_cases <- sum(age_n$case)
 
 # Line plot of number of contacts per age group by month
 contacts_age_plot <- covid_data %>% 
@@ -823,7 +823,7 @@ contacts_age_plot <- covid_data %>%
                     color = age_group), size = 1.5) +
       theme_minimal() +
       labs(title = "Mean number of contacts per COVID case, by week",
-        subtitle = paste0("Missoula County, 2020. Data incomplete for ", age_na, " cases."),
+        subtitle = paste0("Missoula County, 2020. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Mean # contacts") +
       xlab("") +
