--- a/UM_primary_figures.Rmd
+++ b/UM_primary_figures.Rmd
@@ -195,8 +195,8 @@ kable(covid_summary, caption = "Missoula County COVID-19 Cases",
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group))
-age_na <- sum(age_n$case)
+   filter(!is.na(age_group))
+age_cases <- sum(age_n$case)
 
 # Age group bar plot - counts
 age_count_plot <- covid_data %>% 
@@ -204,7 +204,7 @@ age_count_plot <- covid_data %>%
    ggplot() +   
      geom_bar(aes(fct_rev(age_group), fill = um_case), width = .6) +   
      labs(title = "COVID-19 Cases by age group",
-          subtitle = paste0("Missoula County, 2020. Data incomplete for ", age_na, " cases."), 
+          subtitle = paste0("Missoula County, 2020. N = ", age_cases, " cases."), 
           y = "Number of cases", x = "Age Group (years)", fill = "") +
      scale_y_continuous(breaks = c(seq(0, 500, 25)), labels = c(seq(0, 500, 25))) +
      coord_flip() +
@@ -233,6 +233,10 @@ age_count_plot
 \pagebreak  
 
 ```{r}
+age_n <- um_data %>% 
+   filter(!is.na(age_group))
+age_cases <- sum(age_n$case)
+
 # Age group line plot - counts by month
 age_count_month_plot <- um_data %>% 
    filter(test_date_new > "2020-08-01") %>% 
@@ -254,7 +258,7 @@ age_count_month_plot <- um_data %>%
                 fill = NA) +
       theme_minimal() +
       labs(title = "Weekly COVID-19 cases by age group",
-        subtitle = paste0("University of Montana, 2020. Data incomplete for ", age_na, " cases."),
+        subtitle = paste0("University of Montana, 2020. N = ", age_cases, " cases."),
         color = "Age group") +
       ylab("Number of cases per week") +
       xlab("") +
@@ -292,8 +296,8 @@ age_count_month_plot
 
 ```{r}
 race_n <- um_data %>% 
-   filter(is.na(race))
-race_na <- sum(race_n$case)
+   filter(!is.na(race))
+race_cases <- sum(race_n$case)
 
 #Bar plot of race count data
 race_plot_count <- um_data %>% 
@@ -301,7 +305,7 @@ race_plot_count <- um_data %>%
    ggplot() +   
      geom_bar(aes(x = fct_rev(race)), fill = "steelblue", width = .6) +   
      labs(title = "COVID-19 cases by self-reported race",
-          subtitle = paste0("University of Montana. Data incomplete for ", race_na, " cases."),
+          subtitle = paste0("University of Montana. N = ", race_cases, " cases."),
           y = "Count", x = "", fill = "") +
      scale_y_continuous(breaks = c(seq(0, 200, 25)), labels = c(seq(0, 200, 25))) +
      coord_flip() +
@@ -329,8 +333,8 @@ race_plot_count
 
 ```{r}
 ethnicity_n <- um_data %>% 
-   filter(is.na(ethnicity))
-ethnicity_na <- sum(ethnicity_n$case)
+   filter(!is.na(ethnicity))
+ethnicity_cases <- sum(ethnicity_n$case)
 
 #Bar plot of ethnicity count data
 ethnicity_plot <- um_data %>% 
@@ -338,7 +342,7 @@ ethnicity_plot <- um_data %>%
    ggplot() +   
      geom_bar(aes(x = fct_rev(ethnicity)), fill = "steelblue", width = .6) +   
      labs(title = "COVID-19 cases by self-reported ethnicity",
-          subtitle = paste0("University of Montana. Data incomplete for ", race_na, " cases."),
+          subtitle = paste0("University of Montana. N = ", ethnicity_cases, " cases."),
           y = "Count", x = "", fill = "") +
      scale_y_continuous(breaks = c(seq(0, 200, 10)), labels = c(seq(0, 200, 10))) +
      coord_flip() +
@@ -547,14 +551,15 @@ kable(sum_nums, caption = "Number of contacts by age group, University of Montan
 
 ```{r, fig.width = 11, fig.height = 5}
 # Epi curve - date of onset - recent data
+plot_data <- um_data %>% 
+   filter(symptom_onset_date_new > "2020-07-31") %>% 
+   filter(!is.na(symptom_onset_date_new)) 
 
-total_cases <- sum(um_data$case)
+total_cases <- sum(plot_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
 date_14 <- format(Sys.Date() - 14, "%d %b %Y")
 
-epi_curve_onset_recent <- um_data %>% 
-   filter(!is.na(symptom_onset_date_new)) %>% 
-   filter(symptom_onset_date_new > "2020-07-31") %>% 
+epi_curve_onset_recent <- plot_data %>% 
    group_by(symptom_onset_date_new) %>% 
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
@@ -568,6 +573,7 @@ epi_curve_onset_recent <- um_data %>%
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
      labs(title = "University of Montana COVID-19 Cases Since August 1, 2020",
+          subtitle = paste0("Cases in plot = ", total_cases), 
           fill = " ") +
      ylab("Number of Cases") +
      xlab("") +
@@ -605,14 +611,15 @@ epi_curve_onset_recent
 
 ```{r, fig.width = 11, fig.height = 5}
 # Epi curve - date of onset - recent data
+plot_data <- um_data %>% 
+   filter(test_date_new > "2020-07-31") %>% 
+   filter(!is.na(test_date_new))
 
-total_cases <- sum(um_data$case)
+total_cases <- sum(plot_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
 date_14 <- format(Sys.Date() - 14, "%d %b %Y")
 
-epi_curve_onset_recent <- um_data %>% 
-   filter(!is.na(test_date_new)) %>% 
-   filter(test_date_new > "2020-07-31") %>% 
+epi_curve_onset_recent <- plot_data %>% 
    group_by(test_date_new) %>% 
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
@@ -626,6 +633,7 @@ epi_curve_onset_recent <- um_data %>%
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
      labs(title = "University of Montana COVID-19 Cases Since August 1, 2020",
+          subtitle = paste0("Cases in plot = ", total_cases), 
           fill = " ") +
      ylab("Number of Cases") +
      xlab("") +
