general figure updates

--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of October 12, 2020"
+date: "Data as of October 15, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -805,7 +805,7 @@ age_cases <- sum(age_n$case)
 # Line plot of number of contacts per age group by month
 contacts_age_plot <- covid_data %>% 
    filter(test_date_new > "2020-08-01") %>% 
-   mutate(month_of_year = month(test_date_new, label = TRUE)) %>% 
+   #mutate(month_of_year = month(test_date_new, label = TRUE)) %>% 
    mutate(week_of_year = cut.Date(test_date_new, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    group_by(age_group, week_of_year) %>% 
@@ -1119,24 +1119,24 @@ epi_curve_onset <- covid_data %>%
      geom_vline(xintercept = as.numeric(as.Date("2020-03-16")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-03-16"), label = "Schools close", vjust = -0.5,
-                 y = 15), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-03-28")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-03-28"), label = "Shelter in place order", vjust = -0.5,
-                 y = 15), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-04-26")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 start", vjust = -0.5,
-                 y = 15), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 start", vjust = -0.5,
-                 y = 15), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-07-09")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-07-09"), label = "Mask Mandate", vjust = -0.5,
-                 y = 15), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_label(aes(x = Sys.Date()-10, y = 20, 
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_label(aes(x = Sys.Date()-10, y = 30, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
      labs(title = "COVID-19 Cases in Missoula County by Date, 2020",
