--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -31,10 +31,10 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID data 10.12.20.xlsx"), sheet = 1,
+   read_xlsx(paste0(input_path, "COVID data 10.15.20.xlsx"), sheet = 1,
              range = "A2:AB2000", 
-                        col_names = c("case_id", "case_status", "current_hosp", "age", "gender", "race", 
-                                      "ethnicity", "zipcode", "healthcare_worker", "um_case",
+                        col_names = c("case_id", "case_status", "current_hosp", "um_case", "age", "gender", "race", 
+                                      "ethnicity", "zipcode", "healthcare_worker",
                                       "symptoms", "symptom_type", "symptom_onset_date",
                                       "test_date", "contact_with_case", "contact_case_number", 
                                       "epi_linked", "epi_linked_number", "travel_hx",
@@ -42,8 +42,8 @@ covid_data_initial <-
                                       "chronic_conditions", "chronic_conditions_type",
                                       "number_contacts", "patient_died", 
                                       "suspected_source", "community_spread"),
-                        col_types = c("text", "text", "text", "text", "text", "text", 
-                                      "text", "text", "text", "text",
+                        col_types = c("text", "text", "text", "text", "text", "text", "text",
+                                      "text", "text", "text",
                                       "text", "text", "date",
                                       "date", "text", "text",
                                       "text", "text", "text",
@@ -73,7 +73,7 @@ covid_clean <- covid_data_initial %>%
    separate(age_group, c("age_group", "age_group_percent"), sep = ", ") %>% 
    mutate(age_group_percent = as.numeric(age_group_percent),
           county_pop = as.numeric(119000)) %>% 
-   select(case_id, case_status, current_hosp, age, age_group, age_group_percent, age_group2, age_group3,
+   select(case_id, case_status, current_hosp, um_case, age, age_group, age_group_percent, age_group2, age_group3,
           county_pop, gender:community_spread) %>% 
    mutate_if(is.character, tolower) %>% 
    mutate_if(is.factor, tolower) %>% 
@@ -96,7 +96,11 @@ covid_clean <- covid_data_initial %>%
    separate(chronic_conditions, c("chronic_conditions", "chronic_conditions_comment"), sep = "- ") %>% 
    separate(number_contacts, c("number_contacts", "number_contacts_comment"), sep = " ") %>% 
    replace_with_na_all(condition = ~.x %in% c("n/a", "na", "unknown", "unkown")) %>% 
-   mutate(symptom_onset_date = ymd(symptom_onset_date),
+   mutate(symptom_onset_date = as.character(symptom_onset_date),
+          test_date = as.character(test_date),
+          symptom_onset_date = if_else(symptom_onset_date > Sys.Date(), "NA", symptom_onset_date),
+          test_date = if_else(test_date > Sys.Date(), "NA", test_date),
+          symptom_onset_date = ymd(symptom_onset_date),
           discharge_date = ymd(discharge_date),
           test_date = ymd(test_date),
           number_contacts = as.numeric(number_contacts),
@@ -196,7 +200,9 @@ covid_clean <- covid_data_initial %>%
    separate(ethnicity, c("ethnicity", "ethnicity_percent"), sep = ", ") %>% 
    mutate(race = as.factor(race),
           ethnicity = as.factor(ethnicity),
-          um_case = as.factor(um_case))
+          um_case = as.factor(um_case),
+          case_status = as.factor(case_status),
+          current_hosp = as.factor(current_hosp))
 
 summary(covid_clean)
 ```
