--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of October 15, 2020"
+date: "Data as of October 21, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -164,7 +164,7 @@ age_incidence <- covid_data %>%
    ungroup() %>% 
    distinct(age_group, .keep_all = TRUE) %>% 
    mutate(region = "Missoula County") %>% 
-   select(region, age_group, group_cases, group_prop, group_inc, 
+   select(region, age_group, group_cases, group_pop, group_inc, 
           county_pop, age_group_percent) %>% 
    filter(!is.na(age_group)) %>% 
    arrange(age_group)
@@ -242,7 +242,7 @@ age_count_plot <- covid_data %>%
            axis.ticks = element_line(colour = "black")) 
 age_count_plot
 
-#ggsave("age_count_plot.jpg", width = 10, height = 5)
+#ggsave("age_count_plot.jpg", width = 12, height = 6)
 ```
 
 \pagebreak  
@@ -406,7 +406,7 @@ age_incidence_plot_bar <- age_incidence %>%
            axis.ticks = element_line(colour = "black")) 
 age_incidence_plot_bar
 
-#ggsave("age_incidence_plot_bar.jpg", width = 10, height = 5)
+#ggsave("age_incidence_plot_bar.jpg", width = 12, height = 6)
 ```
 
 \pagebreak  
@@ -478,7 +478,7 @@ age_incidence_plot_line <- covid_data %>%
 
 age_incidence_plot_line
 
-#ggsave("C:/R/covid19/age_incidence_plot_line.png", width = 10, height = 6)
+#ggsave("C:/R/covid19/age_incidence_plot_line.png", width = 12, height = 6)
 ```
 
 \pagebreak  
@@ -674,7 +674,7 @@ symptoms_gender_plot <- covid_data %>%
      scale_fill_manual(values = cbPalette)
 symptoms_gender_plot
 
-#ggsave("symptoms_gender_plot.jpg", width = 10, height = 5)
+#ggsave("symptoms_gender_plot.jpg", width = 12, height = 6)
 ```
 
 \pagebreak  
@@ -772,7 +772,7 @@ covid_piechart
 ```{r}
 piechart_function(plot_fill = "number_contacts_categorical", var_label = "Number of contacts - all cases")
 
-#ggsave("piechart_contacts.jpg", width = 10, height = 5)
+#ggsave("piechart_contacts.jpg", width = 10, height = 10)
 ```
 
 \pagebreak  
@@ -854,7 +854,7 @@ contacts_age_plot <- covid_data %>%
 
 contacts_age_plot
 
-#ggsave("C:/R/covid19/contacts_age_plot.png", width = 10, height = 6)
+#ggsave("C:/R/covid19/contacts_age_plot.png", width = 12, height = 6)
 ```
 
 \pagebreak  
@@ -863,7 +863,7 @@ contacts_age_plot
 # Epi curve - date of onset - recent data
 
 plot_data <- covid_data %>% 
-   filter(symptom_onset_date_new > "2020-06-30") 
+   filter(symptom_onset_date_new > "2020-07-31") 
 
 total_cases <- sum(plot_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
@@ -875,9 +875,9 @@ epi_curve_onset_recent <- plot_data %>%
      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
      geom_col(aes(symptom_onset_date_new, case, fill = symptom_onset_date_indicator)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-07-09")), color = "black", 
+     geom_vline(xintercept = as.numeric(as.Date("2020-09-07")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-07-09"), label = "Mask Mandate", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
                  y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-08-19")), color = "black", 
               size = 1, linetype = "dashed") +
@@ -886,17 +886,17 @@ epi_curve_onset_recent <- plot_data %>%
      geom_label(aes(x = Sys.Date()-7, y = 40, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-     labs(title = "COVID-19 Cases in Missoula County Since July 1, 2020",
+     labs(title = "COVID-19 Cases in Missoula County Since August 1, 2020",
           subtitle = paste0("Cases in plot = ", total_cases),
           fill = " ") +
      ylab("Number of Cases") +
      xlab("") +
-     scale_x_date(breaks = seq.Date(from = as.Date("2020-07-01"), 
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-08-01"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "3 days"),
-                  labels = seq.Date(from = as.Date("2020-07-01"), 
+                                    by = "2 days"),
+                  labels = seq.Date(from = as.Date("2020-08-01"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "3 days"),
+                                    by = "2 days"),
                   date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -918,7 +918,7 @@ epi_curve_onset_recent <- plot_data %>%
      scale_fill_manual(values = cbPalette) 
 epi_curve_onset_recent 
 
-#ggsave("ep_curve_onset_recent.jpg", width = 11, height = 5)
+#ggsave("ep_curve_onset_recent.jpg", width = 12, height = 5.5)
 ```
 
 \pagebreak  
@@ -927,7 +927,7 @@ epi_curve_onset_recent
 # Epi curve - test date
 
 plot_data <- covid_data %>% 
-   filter(test_date_new > "2020-06-30") 
+   filter(test_date_new > "2020-07-31") 
 
 total_cases <- sum(plot_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
@@ -938,9 +938,9 @@ epi_curve_test_date <- plot_data %>%
      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
      geom_col(aes(test_date_new, case, fill = test_date_indicator)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-07-09")), color = "black", 
+     geom_vline(xintercept = as.numeric(as.Date("2020-09-07")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-07-09"), label = "Mask Mandate", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
                  y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-08-19")), color = "black", 
               size = 1, linetype = "dashed") +
@@ -949,17 +949,17 @@ epi_curve_test_date <- plot_data %>%
      geom_label(aes(x = Sys.Date()-7, y = 40, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-     labs(title = "COVID-19 Cases in Missoula County Since July 1, 2020",
+     labs(title = "COVID-19 Cases in Missoula County Since August 1, 2020",
           subtitle = paste0("Cases in plot = ", total_cases),
           fill = " ") +
      ylab("Number of Cases") +
      xlab("") +
-     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-08-01"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "5 days"),
-                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    by = "2 days"),
+                  labels = seq.Date(from = as.Date("2020-08-01"), 
                                     to = as.Date(Sys.Date()), 
-                                    by = "5 days"),
+                                    by = "2 days"),
                   date_labels = "%d-%b") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -982,7 +982,7 @@ epi_curve_test_date <- plot_data %>%
 
 epi_curve_test_date
 
-#ggsave("epi_curve_test_date.jpg", width = 10, height = 5)
+#ggsave("epi_curve_test_date.jpg", width = 12, height = 5.5)
 ```
 
 \pagebreak  
@@ -1098,7 +1098,7 @@ county_r_plot <- county_r %>%
    scale_color_manual(values = c("black")) 
 county_r_plot
 
-#ggsave("C:/R/covid19/missoula_r_plot.png", width = 11, height = 6)
+#ggsave("C:/R/covid19/missoula_r_plot.png", width = 12, height = 6)
 ```
 
 \pagebreak  
@@ -1126,15 +1126,31 @@ epi_curve_onset <- covid_data %>%
                  y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-04-26")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 start", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 reopening", vjust = -0.5,
                  y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 start", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 reopening", vjust = -0.5,
                  y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-07-09")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-07-09"), label = "Mask Mandate", vjust = -0.5,
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-09-07")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-05-25")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-05-25"), label = "Memorial Day", vjust = -0.5,
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-07-04")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-07-04"), label = "July 4th", vjust = -0.5,
+                 y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-08-19")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-08-19"), label = "UM semester start", vjust = -0.5,
                  y = 30), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_label(aes(x = Sys.Date()-10, y = 30, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
@@ -1172,7 +1188,7 @@ epi_curve_onset <- covid_data %>%
 
 epi_curve_onset
 
-#ggsave("epi_curve_onset.jpg", width = 11, height = 5)
+#ggsave("epi_curve_onset.jpg", width = 12, height = 5.5)
 ```
 
 
