--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of October 21, 2020"
+date: "Data as of October 26, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -47,7 +47,8 @@ file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 
 covid_data <- read_rds(paste0(input_path, "covid_data_clean.rds")) %>% 
-   filter(gender != "nb")
+   filter(gender != "nb" | is.na(gender)) %>% 
+   filter()
 ```
 
 
@@ -458,7 +459,7 @@ age_incidence_plot_line <- covid_data %>%
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
-      scale_y_continuous(breaks = c(seq(0, 500, 50)), labels = c(seq(0, 500, 50))) +
+      scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
       theme(strip.text = element_text(size = 16, colour = "black"),
          title = element_text(size = 18, colour = "black"),
          panel.grid = element_blank(),
@@ -1078,7 +1079,7 @@ county_r_plot <- county_r %>%
    xlab("") +
    geom_hline(yintercept = 1, color = "red", size = 1.2) +
    scale_x_date(date_breaks = "2 days", date_labels = "%d-%b") +
-   scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
+   scale_y_continuous(breaks = seq(0, 5, 0.1), labels = seq(0, 5, 0.1)) +
    theme_minimal() +
    theme(strip.text = element_text(size = 16, colour = "black"),
          title = element_text(size = 18, colour = "black"),
@@ -1105,12 +1106,14 @@ county_r_plot
 
 ```{r, fig.width = 11, fig.height = 5}
 # Epi curve - date of onset
+plot_data <- covid_data %>% 
+   filter(symptom_onset_date_new > "2020-03-01") 
 
 total_cases <- sum(covid_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
 date_14 <- format(Sys.Date() - 14, "%d %b %Y")
 
-epi_curve_onset <- covid_data %>% 
+epi_curve_onset <- plot_data %>% 
    filter(!is.na(symptom_onset_date_new)) %>% 
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
